[tool.poetry]
name = "natural-language-processing-ep-1"
version = "0.1.0"
description = ""
authors = ["Ale Farias <mail.alefarias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.1.2"
scikit-learn = "0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
